all latests version were added

--- a/post_cc/gomoku/Makefile
+++ b/post_cc/gomoku/Makefile
@@ -1,14 +1,16 @@
 NAME=Gomoku
 
 
-
+#go build pour compiler ou go run pour interpret
 
 all:
-
+	@go build -o $(NAME)
 clean:
+	@echo TODO CLEAN RULE
 
+fclean: clean
+	@rm -rf $(NAME)
 
-fclean:
+re: fclean all
 
-
-re:
+.PHONY: all clean fclean re
